@@ -60,7 +60,20 @@ exit_check () {
             echo when you upgrade your Debian system.
             exit_check
         fi
-    
+
+        # arm boxes require __ARM_NR_set_tls in the kernel to function properly.
+        if [ "$realarch" = arm ]
+        then
+            if kernel_compare_versions "$kernel_ver" lt 2.6.12
+            then
+                echo WARNING: This version of glibc requires that you be running
+                echo kernel version 2.6.12 or later.  Earlier kernels contained
+                echo bugs that may render the system unusable if a modern version
+                echo of glibc is installed.
+                exit_check
+            fi	
+        fi
+ 
         # The GNU libc requires 2.6 kernel (except on m68k) because we drop to 
         # support linuxthreads
         if [ "$realarch" != m68k ]
