@@ -95,6 +95,9 @@ glibc (2.5-10) UNRELEASED; urgency=low
     short replies.
   * sysdeps/depflags.mk, sysdeps/depflags.pl: use DEB_HOST_ARCH_OS and
     DEB_HOST_ARCH instead of DEB_HOST_GNU_SYSTEM and DEB_HOST_GNU_TYPE.
+  * debian/sysdeps/arm.mk, debian/script.in/kernelcheck.sh: bump minimum
+    kernel requirement to 2.6.12 on arm to get __ARM_NR_set_tls syscall.
+    Closes: #421037.
 
   [ Clint Adams ]
   * debian/local/manpages/ld.so.8: quote accepted values for LD_DEBUG.
